added tortoise orm

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-ROOT_PATH='/v1'
+ROOT_PATH=/v1
 
-APP_NAME='Fast API'
-APP_VERSION='0.0.1'
-APP_SECRET='secret'
-APP_DEBUG='true'
+APP_NAME=Fast API
+APP_VERSION=0.0.1
+APP_SECRET=secret
+APP_DEBUG=true
+
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=db
+DB_USERNAME=postgres
+DB_PASSWORD=password
